Fixed Android 6 issues