@@ -21,12 +21,14 @@
 
 package me.impa.knockonports.fragment
 
+import android.os.Build
 import android.os.Bundle
 import android.view.LayoutInflater
 import android.view.View
 import android.view.ViewGroup
 import android.widget.Button
 import android.widget.ScrollView
+import androidx.core.content.ContextCompat
 import androidx.fragment.app.Fragment
 import androidx.lifecycle.Observer
 import androidx.lifecycle.ViewModelProvider
@@ -34,6 +36,7 @@ import androidx.recyclerview.widget.DividerItemDecoration
 import androidx.recyclerview.widget.ItemTouchHelper
 import androidx.recyclerview.widget.LinearLayoutManager
 import androidx.recyclerview.widget.RecyclerView
+import androidx.vectordrawable.graphics.drawable.VectorDrawableCompat
 import com.google.android.material.textfield.TextInputEditText
 import me.impa.knockonports.R
 import me.impa.knockonports.data.ContentEncoding
@@ -74,7 +77,10 @@ class BasicSettingsFragment : Fragment() {
 
         stepsRecyclerView.layoutManager = LinearLayoutManager(activity)
         stepsRecyclerView.adapter = stepsAdapter
-        stepsRecyclerView.addItemDecoration(DividerItemDecoration(context, DividerItemDecoration.VERTICAL))
+        stepsRecyclerView.addItemDecoration(DividerItemDecoration(context, DividerItemDecoration.VERTICAL).apply {
+            if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.LOLLIPOP)
+                setDrawable(ContextCompat.getDrawable(context!!, R.drawable.shape_divider)!!)
+        })
         val icmpTouchHelper = ItemTouchHelper(KnockerItemTouchHelper(stepsAdapter, ItemTouchHelper.UP or ItemTouchHelper.DOWN,
                 ItemTouchHelper.LEFT or ItemTouchHelper.RIGHT))
         icmpTouchHelper.attachToRecyclerView(stepsRecyclerView)
