@@ -1,3 +1,4 @@
 Новое: опция для скрытия описания в списке последовательностей
 Новое: журнал событий
 Исправление ошибок
+Исправление совместимости с pre-Lollipop устройствами
