@@ -1,1 +1,4 @@
-Исправлены проблемы на Android 6
+Новое: опция для скрытия описания в списке последовательностей
+Новое: журнал событий
+Исправление ошибок
+Исправление совместимости с pre-Lollipop устройствами
