@@ -1,1 +1,4 @@
-Fixed Android 6 issues
+New: option to hide sequence details in the sequence list
+New: event log
+Bug fixes
+Fixed compatibility with pre-Lollipop devices
